add sqlite plugin implementation
